--- a/index.html
+++ b/index.html
@@ -7,78 +7,142 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <title>Resume website</title>
+    <title>Zack's Portfolio</title>
   </head>
   <body>
-    <div id="header-text" class="space-mono-regular text centered-text">
-      <h1>
-        Zackery Drake
-      </h1>
+    <div class="titlebar">
+      <h1>Zack's Portfolio</h1>
+      <p>Hello! I'm Zack, a Computer Science Junior, Math/CS club president, and musician at Wilkes University</p>
     </div>
-    <div id="planet-container">
-      <video id="planet" autoplay loop muted playsinline disablepictureinpicture>
-        <source src="planet.webm" type="video/webm">
-      </video>
-    </div>
-    <div id="spacer"></div>
-    <div id="content-container">
-      <button id="transition-button" class="space-mono-regular content-text">&nbsp;Analyze...&nbsp;</button>
-      <div id="content" class="space-mono-regular content-text">
-        <h2>
-          Hello! I'm Zack! A Computer Science Major at Wilkes University,
-        </h2>
+    <div class="experience">
+      <h2>Experience</h2>
+      <div class="experience1">
+        <h3>System Administrator and lab TA, Wilkes University</h3>
         <p>
-          I am fascinated by the many applications of software systems in the field of STEM,<br><br>
-          My passion for technological integration started in high school. I was a music student, and in my free time, a hobbyist Python programmer. I brought my hobby to the STEM department, where I programmed the Autonomous mode for our FIRST tech challenge robot. I loved watching all of the team's talented engineering and ingenuity come together into an awesome project. From here, I wished to pursue this path further.<br><br> 
-          Since deciding to study Computer Science at Wilkes, I've gained essential IT and System Administration work experience, as well as Software Engineering and AI integration experience from my studies, an award-winning project at HenHacks 2025, and ICPC.<br><br> 
-          My current focus is tying together my background in IT, System Administration, Networking, and Programming to solve present, and growing real-world challenges. I am looking to bring that curiosity and technical edge to a team where I can continue to learn and apply my knowledge further.<br><br>
-        </p>
-        <hr>
-        <h2>
-          Education and Certifications
-        </h2>
-        <p>
-          B.S. in Computer Science || Wilkes Univeristy (to be awarded May 2027)<br><br>
-          CompTIA Network+ Certified
-        </p>
-        <hr>
-        <h2>
-          Professional Experience
-        </h2>
-        <p>
-          <h3>System Administrator Intern || Wilkes University</h3>
-          <b> >>> </b> Administrate Apache 2.0 and Bind9 web & DNS server<br>
-          <b> >>> </b> Manage and resolve user requests and issues<br>
-          <b> >>> </b> Troubleshoot network issues on-site and remotely<br><br>
+          At Wilkes University, I'm a system administrator that helps manage 
+          the hardware and software of two Linux labs, users of those labs, 
+          the Math/CS webserver (including DNS and webpage hosting), LDAP, and file 
+          storage servers/services. Users include students from Computer Science, 
+          Data Science, Cloud Computing, as well as students that take fundamental 
+          programming courses at Wilkes University in the Math/CS department. Professors 
+          also use the Math/CS webserver for delivering content for their students. 
         </p>
         <p>
-          <h3>I.T. Technician || UFCW Community Federal Credit Union</h3>
-          <b> >>> </b> Work alongside I.T. technicans and Cybersecurity Analysts to gain experience, troubleshoot, and resolve issues in a Microsoft environment<br>
-          <b> >>> </b> Powershell automation of Outlook signatures using Active Directory entries<br>
-          <b> >>> </b> Clone and deploy secure company workstations using cloning tools such as Clonezilla<br><br>
+          I'm also currently the lab TA for CS246, Intro to C and Unix, on standby with
+          assistance for software or hardware issues.
         </p>
-        <hr>
-        <h2>
-          Projects
-        </h2>
+      </div>
+      <div class="experience2">
+        <h3>
+          I.T. Intern at UFCW Federal Credit Union
+        </h3>
         <p>
-          <h3>RoomReady | AI Image Analysis and Disater Report Preperation</h3>
-          <b> >>> </b> Does image analysis to prepare a report based on natural disaster preparedness of a room. RoomReady uses Python, TypeScript, React, HTML, and CSS, and placed 1st among 470+ competitors at HenHacks 2025<br>
-          <h3>Multithreaded Course Registrar Web Scraper</h3>
-          <b> >>> </b> Created a parallel web scraper to gather Wilkes University's course data for use in an overhauled Web UI.<br><br>
-          And more to come ... :)
-        </p>
-        <hr>
-        <h2>
-          Leadership Experience
-        </h2>
-        <p>
-          Math/CS Club President || Wilkes University
+          In the Summer of 2025, I was the I.T. intern at a local credit union.
+          As an I.T. intern, I was primarily troubleshooting and resolving issues present
+          on Windows 11 and Windows Server. These issues included hardware issues, 
+          issues and questions about proprietary banking software, and network issues. 
+          I also worked on updates and deployments of security software, new hardware, and 
+          was as the forefront of automating email signatures using Active directory employee
+          entries for 50+ users across multiple branches.
         </p>
       </div>
     </div>
-    <div id="particles-js" class="stars-background"></div>
-    <script src="particles.js"></script> 
-    <script src="src/app.js"></script>
+    <div class="projects">
+      <h2 >Projects</h2>
+      <div class="project4">
+        <h3>DungeonsTogether</h3>
+        <p>
+          In the Winter of 2025, I took on a personal project Dungeons Together,
+          a tool for myself and my friends to organize our homebrew campaigns easier.
+        </p>
+        <p>
+          DungeonsTogether is a Dungeons and Dragons management platform for custom
+          homebrew campaigns. The platform supports OAuth and user 
+          authentication and creation of multiplayer campaigns and is my most recent
+          development project, as well as my largest solo-development project.
+        </p>
+        <p>
+          DungeonsTogether is a full stack platform using Typescript, React, TailwindCSS,
+          for implementation of frontend design. Visual layout and designs were concepted using
+          Figma, and are mindful of <a href="https://lawsofux.com">The Laws of UX</a>. The webpage
+          is deployed and authentication is handled using Firebase. The backend is developed using
+          Go for the REST API, and deployed using Docker on Google Cloud Run using Terraform for 
+          infrastructure-as-code (IaC). Stateful user and campaign data is stored in a PostgreSQL 
+          database. 
+        </p>
+        <p>
+          Exta notes: One thing I wanted to practice besides full stack development, was 
+          modern defensive programming practices. As well as researching and implementing 
+          API security, I've consulted industry professionals from my local DEFCON group 
+          for advice and pointers.
+        </p>
+      </div>
+      <div class="project3">
+        <h3>Tuned Mass Damper (TMD) Digital Twin simulation</h3>
+        <p>
+          For my software engineering practicuum, I worked with one of my peers to 
+          develop a cloud native implementation of a TMD digital twin. 
+        </p>
+        <p>
+          So what is a TMD? A TMD is a massive device used in skyscrapers for
+          stability against natural elements such as wind and earthquakes. It works
+          by counteracting the force applied by external forces to cancel out undesirable
+          movement. Our TMD simulation simulates this by generating AI-augmented simulation
+          data to represent realistic earthquake scenarios against simulated building 
+          parameters, and solves the simulation using differential equations to create 
+          predictive outcomes.
+        </p>
+        <p>
+          The digital twin was built using Gitlab contaier registry for
+          cloud image storage, Helm for fast setup of Kubernetes cluster, Apache Kafka for
+          inter-service messaging and logging, Strimzi for easy setup of Kafka within a Kubernetes
+          cluster, and Redis for state caching. The application implements microservice architecture
+          and each service is scalable to meet performance needs. 
+        </p>
+      </div>
+      <div class="project2">
+        <h3>SelfQuest</h3>
+        <p>
+          In the Fall of 2025, I worked in a team of 3 to present SelfQuest to the 
+          Lehigh Hacks 2025 hackathon, winning first place among 200+ participants. 
+        </p>
+        <p>
+          SelfQuest is an AI reflection therapy webapp, which generates journal entries
+          for a fictional character based on a short questionnare of the user's mental wellbeing.
+          SelfQuest allows the user to decompress and express themselves through the lense of a 3rd 
+          party, and relate and work through their mental wellbeing in a unique way through an interesting
+          application of AI.
+        </p>
+        <p>
+          SelfQuest is implemented using full stack cloud native technologies. 
+          React, Typescript, and TailwindCSS were used to design and implement 
+          the frontend, and serverless backend functions were implemented using 
+          with Python. AWS CDK was used to deploy infrastructure components 
+          such the REST API Gateway, AWS Lambda, and DynamoDB using infrastructure
+          as code (IaC) principles.
+        </p>
+      </div>
+      <div class="project1">
+        <h3>RoomReady</h3>
+        <p>
+          In a team of 4, I helped develop and present RoomReady to Henhacks 2025,
+          a J.P. Morgan Chase sponsored hackathon, winning first place among over 
+          470+ competitors.
+        </p>
+        <p>
+          RoomReady is a AI image analysis disaster preperation report generator.
+          In plain English, the user take a picture of a room, upload
+          it to RoomReady for analysis, and it will generate a report of actionable
+          to-do steps on how to best prepare the room for natural disasters given 
+          known weather and climate data provided by NOAA's API.
+        </p>
+        <p>
+          RoomReady implements full-stack technologies, including React and Typescript
+          on the frontend, and Python with FastAPI in the backend. We interfaced with 
+          the Google Gemini API to provide server-side prompting and AI parsing. 
+        </p>
+      </div>
+
+    </div>
   </body>
 </html>
