added css disclaimer

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   </head>
   <body>
     <div class="titlebar">
+
       <h1>Zack's Portfolio</h1>
       <p>Hello! I'm Zack, a Computer Science Junior, Math/CS club president, and musician at Wilkes University</p>
+      <small>css coming soon, I promise</small>
     </div>
     <div class="experience">
       <h2>Experience</h2>
